# aera-lang

./: CMakeLists.txt  README.md  aera.cpp  aera.h  dune-project
docs/spec/: README.md  control_flow.md  error_handling.md  functions.md  grammar.ebnf  grammar.md  lexical.md  lexical_structure.md  minimal_grammar.ebnf  other_types.md  overview.md  type_system.md  types.md  variables.md
grammar/: aera.ebnf
include/aera/: ast.hpp  diagnostics.hpp  source_context.hpp  source_location.hpp  token.hpp  token_type.hpp  types.hpp
include/aera/diagnostics/: diagnostics.hpp
include/aera/lexer/: lexer.hpp  token.hpp  token_type.hpp
include/aera/parser/: ast.hpp  parser.hpp
include/aera/token/: token.hpp  token_type.hpp
lib/: ast.ml  dune  error.ml  lexer.ml  parser.ml  pretty.ml  source_location.ml  token.ml
lib/frontend/: ast.ml  dune  lexer.ml  parser.ml  position.ml  pretty.ml  token.ml
lib/interpreter/: dune  env.ml  eval.ml  interpreter.ml  value.ml
src/diagnostics/: diagnostics.cpp
src/grammar/: aera.ebnf
src/lexer/: lexer.cpp  lexer.hpp  token.hpp  token_type.hpp
src/parser/: ast.hpp  parser.cpp
test/: dune  test_lexer.ml  test_lexer_helper.ml
tests/: CMakeLists.txt  test_diagnostics.cpp  test_helpers.hpp  test_source_context.cpp
tests/lexer/: CMakeLists.txt  test_lexer.cpp
